# spoke-test-rig

./: README.md  pyproject.toml
src/spoke_test_rig/: viewer.py
src/spoke_test_rig/cad/: __init__.py  arm.py  assembly.py  hub.py  lock_bolt.py  params.py  pin.py
src/spoke_test_rig/cad/scripts/: export.py
src/spoke_test_rig/export/: __init__.py
