[project]
name = "spoke-test-rig"
version = "0.1.0"
description = "A test rig for the esp-pov project."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["build123d>=0.10.0", "ocp-vscode>=3.4.0"]

[project.scripts]
export = "spoke_test_rig.export:main"
view = "spoke_test_rig.viewer:main"

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
